[package]
name = "xolotl"
version = "0.0.1"
authors = ["Jeff Burdges <burdges@gnunet.org>"]

[dependencies]
arrayref = "^0.3"
rustc-serialize = "0.3"
# chrono = "0.3"

rand = "^0.3"
siphasher = "^0.1"
consistenttime = "^0.2"
clear_on_drop ="^0.2.0"
curve25519-dalek = "^0.3.0"
ed25519-dalek = "^0.2.0"
keystream = "^1.0.0"
chacha = "^0.1.0"
lioness = "^0.1"

rust-crypto = "^0.2"  # replace with poly1305 and SHA3 crates

# mmap = "*"

[dev-dependencies]



# curve25519-dalek = { git = "https://github.com/hdevalence/curve25519-dalek", branch = "feature/montgomery-x-format"  }
