[package]
name = "xolotl"
version = "0.0.1"
authors = ["Jeff Burdges <burdges@gnunet.org>"]

[dependencies]
arrayref = "^0.3.3"
arrayvec = "^0.3.22"
rustc-serialize = "^0.3.22"
# chrono = "0.3"

rand = "^0.3"
siphasher = "^0.1"
consistenttime = "^0.2"
clear_on_drop ="^0.2.0"
curve25519-dalek = "^0.6.0"
ed25519-dalek = "^0.3.1"
# sha3 = "^0.5" # Needs generic-array
sha2 = "^0.4" # Needs generic-array

keystream = "^1.0.0"
chacha = "^0.1.0"
lioness = "^0.1"

rust-crypto = "^0.2"  # replace with poly1305 and SHA3 crates

# mmap = "*"

[dev-dependencies]

