[package]
name = "xolotl"
version = "0.0.1"
authors = ["Jeff Burdges <burdges@gnunet.org>"]

[dependencies]
arrayref = "^0.3.4"
arrayvec = "^0.3.22"

hex = "^0.2"
# data-encoding = "2.0.0-rc.1"
# rustc-serialize = "^0.3.22"
# chrono = "0.3"

rand = "^0.3"
siphasher = "^0.1"
consistenttime = "^0.2"
clear_on_drop ="^0.2.0"
curve25519-dalek = "^0.11.0"
ed25519-dalek = "^0.4.2"
# sha3 = "^0.5" # Needs generic-array
sha2 = "^0.6" # Needs generic-array

keystream = "^1.0.0"
chacha = "^0.1.0"
lioness = "^0.1.1"

rust-crypto = "^0.2"  # replace with poly1305 and SHA3 crates

# mmap = "*"

[dev-dependencies]

